welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:12: error: type mismatch;
 found   : Unit
 required: Boolean
    if (temp < 91 && temp > 59)
    ^squirrelPlay:10: error: type mismatch;
 found   : Unit
 required: Boolean
  if (!isSummer)
  ^